home/.vim/templates/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:      
  namespace: 
  labels:
    app:       
    component: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app:       
      component: 
  template:
    metadata:
      labels:
        app:       
        component: 
    spec:
      containers:
      - name:  
        image: 
        ports:
        - containerPort: 
        volumeMounts:
      volumes:
