home/.vim/templates/k8s/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name:      
  namespace: 
spec:
  selector:
    app:
    env:
    component:
  ports:
  - protocol:   TCP
    port:       
    targetPort:
