home/.vim/templates/k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:      
  namespace: 
  annotations:
    kuberentes.io/tls-acme: "true"
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: 
          servicePort:
